# PageIndex-RAG

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/services/: llm_client.py  navigation.py  pageindex_service.py
app/tasks/: processing.py
app/utils/: cache.py  hashing.py
frontend/: app.js  index.html  style.css
