[project]
name = "pageindex-rag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "filelock>=3.29.0",
    "openai>=2.33.0",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.27",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
